--- a/src/index.html
+++ b/src/index.html
@@ -14,3 +14,8 @@
   <app-root></app-root>
 </body>
 </html>
+<!-- Recrutation project for Mr Beniamin
+https://www.olx.pl/oferty/uzytkownik/4p7fa/
+ME: Tonio, Mithtonir, Paweł
+Use only for recrutation porposes!
+ -->
